src/objects/jj_rb_Rebate_Accrual__c.object
<CustomObject>
    <description>The information generated from the monthly execution of the rebate accruals is stored here.</description>
    <fields>
        <fullName>jj_rb_Accrual_Date__c</fullName>
        <formula>DATE( value(text(jj_rb_Year__c)) ,value(text( jj_rb_Month__c )),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jj_rb_Customer_NCM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NCM associated with the customer.</description>
        <label>Customer National Channel Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rebate_Accruals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer for whom the rebate accrual record is created.</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rebate Accruals</relationshipLabel>
        <relationshipName>Rebate_Accruals_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>jj_rb_Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jj_rb_Rebate_Group__c</fullName>
        <label>Rebate Group</label>
        <picklist>
            <picklistValues>
                <fullName>Retailer Pharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homacare Pharma</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jj_rb_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jj_rb_Total_Rebate_Amount__c</fullName>
        <description>Grant total of the rebate amount for this rebate accrual</description>
        <label>Total Rebate Amount</label>
        <summarizedField>jj_rb_Rebate_Accrual_Line_Item__c.jj_rb_Net_Rebate_Accrual_After_Adj__c</summarizedField>
        <summaryForeignKey>jj_rb_Rebate_Accrual_Line_Item__c.jj_rb_Rebate_Accrual__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>jj_rb_Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Rebate Accrual</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Customer__c</columns>
        <columns>jj_rb_Customer_NCM__c</columns>
        <columns>jj_rb_Month__c</columns>
        <columns>jj_rb_Year__c</columns>
        <columns>jj_rb_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RA-{000}</displayFormat>
        <label>Rebate Accrual Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Accruals</pluralLabel>
    <recordTypes>
        <fullName>jj_rb_Homacare_Accrual</fullName>
        <active>true</active>
        <label>Homacare Accrual</label>
    </recordTypes>
    <recordTypes>
        <fullName>jj_rb_Retailer_Accrual</fullName>
        <active>true</active>
        <label>Retailer Accrual</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>